# operations-debs-contenttranslation-apertium-br-fr

./: ACKNOWLEDGEMENTS  Makefile.am  NEWS  README  apertium-br-fr.br-fr.dix  apertium-br-fr.br-fr.t1x  apertium-br-fr.br-fr.t2x  apertium-br-fr.br-fr.t3x  apertium-br-fr.br.dix  apertium-br-fr.br.tsx  apertium-br-fr.fr.metadix  apertium-br-fr.post-fr.dix  apertium-br-fr.pre-xfer-br.t1x  apertium-br-fr_0.5.0+svn~57870.orig.tar.gz.delta  apertium-br-fr_0.5.0+svn~57870.orig.tar.gz.id  apertium-br-fr_0.5.0~r61325.orig.tar.gz.delta  apertium-br-fr_0.5.0~r61325.orig.tar.gz.id  configure.ac  modes.xml  pending-tests.sh  regression-tests.sh
corpus/: 0001.dep.txt  0001.mor.txt  0001.sur.txt  0001.syn.txt  0001.tag.txt  0002.dep.txt  0002.mor.txt  0002.sur.txt  0002.syn.txt  0002.tag.txt  0003.dep.txt  0003.mor.txt  0003.sur.txt  0003.syn.txt  0003.tag.txt  0004.mor.txt  0004.sur.txt  0004.syn.txt  0004.tag.txt  0005.dep.txt  0005.mor.txt  0005.sur.txt  0005.syn.txt  0005.tag.txt  0006.sur.txt  0009.sur.txt  0010.sur.txt  0011.sur.txt  0012.sur.txt  0013.sur.txt  0014.sur.txt  0015.sur.txt  0016.sur.txt  0017.sur.txt  0018.sur.txt  0019.sur.txt  0020.sur.txt  0021.sur.txt  0022.sur.txt  0023.sur.txt  (+1135 more)
corpus/alan/: 0006.dep.txt  0006.mor.txt  0006.syn.txt  0006.tag.txt  0007.dep.txt  0007.mor.txt  0007.sur.txt  0007.syn.txt  0007.tag.txt  0008.dep.txt  0008.mor.txt  0008.sur.txt  0008.syn.txt  0008.tag.txt  README
debian/: changelog  control
dev/: apertium-br-fr.br-fr-hand-written.lrx  apertium-br-fr.br-fr.ldx  apertium-br-fr.br-fr.lrx  inconsistency-summary.sh  inconsistency.sh  mutation-replace.sh  old_rules.t1x  parole-tags.txt  testvoc-summary.txt
